made the login in function work

--- a/views/base.pug
+++ b/views/base.pug
@@ -19,4 +19,12 @@ html
 
         //FOOTER
         include _footer
-            script(src="/js/mapbox.js")
+        
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+
+        //script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js")
+        //script(src="/js/mapbox.js")
+        //script(src="/js/login.js")
+        script(src="/js/bundle.js")
+        
